Fixed some bugs for tiling mulitple views in a dashboard (specifically alignment, table, map views), updated table settings format, fixed bug in map view where node positions would reroll too frequently (such as on node transparency or basemap changes) and link positions wouldn't alway be synced, fixed bug with files readFastas function

--- a/src/app/visualizationComponents/TableComponent/table-plugin-component.less
+++ b/src/app/visualizationComponents/TableComponent/table-plugin-component.less
@@ -10,13 +10,8 @@
 
 .tool-btn {
     height: 30px;
-    display: block !important;
 }
 
-.data-types {
-    width: auto !important;
-    margin: 0 20px;
-}
 
 :host ::ng-deep .ui-table-customers {
     box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px -1px rgba(0, 0, 0, 0.12);
